cmake_minimum_required(VERSION 3.6)
project(C++)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(es1 es1.cpp)
add_executable(es2 es2.cpp)
add_executable(es3 es3.cpp)
add_executable(es4 es4.cpp)
add_executable(es5 es5.cpp)
add_executable(es6 es6.cpp)
add_executable(es7 es7.cpp)
add_executable(es8 es8.cpp)